🧪 update LocalFileStorageTest